; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_LockBuffer.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_LockBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFER_LOCK_UNLOCK = common dso_local global i32 0, align 4
@BUFFER_LOCK_SHARE = common dso_local global i32 0, align 4
@LW_SHARED = common dso_local global i32 0, align 4
@BUFFER_LOCK_EXCLUSIVE = common dso_local global i32 0, align 4
@LW_EXCLUSIVE = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"unrecognized buffer lock mode: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LockBuffer(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @BufferIsValid(i64 %6)
  %8 = call i32 @Assert(i32 %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i64 @BufferIsLocal(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %48

13:                                               ; preds = %2
  %14 = load i64, i64* %3, align 8
  %15 = sub nsw i64 %14, 1
  %16 = call i32* @GetBufferDescriptor(i64 %15)
  store i32* %16, i32** %5, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @BUFFER_LOCK_UNLOCK, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %13
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @BufferDescriptorGetContentLock(i32* %21)
  %23 = call i32 @LWLockRelease(i32 %22)
  br label %48

24:                                               ; preds = %13
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @BUFFER_LOCK_SHARE, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %33

28:                                               ; preds = %24
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @BufferDescriptorGetContentLock(i32* %29)
  %31 = load i32, i32* @LW_SHARED, align 4
  %32 = call i32 @LWLockAcquire(i32 %30, i32 %31)
  br label %47

33:                                               ; preds = %24
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* @BUFFER_LOCK_EXCLUSIVE, align 4
  %36 = icmp eq i32 %34, %35
  br i1 %36, label %37, label %42

37:                                               ; preds = %33
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @BufferDescriptorGetContentLock(i32* %38)
  %40 = load i32, i32* @LW_EXCLUSIVE, align 4
  %41 = call i32 @LWLockAcquire(i32 %39, i32 %40)
  br label %46

42:                                               ; preds = %33
  %43 = load i32, i32* @ERROR, align 4
  %44 = load i32, i32* %4, align 4
  %45 = call i32 @elog(i32 %43, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %44)
  br label %46

46:                                               ; preds = %42, %37
  br label %47

47:                                               ; preds = %46, %28
  br label %48

48:                                               ; preds = %12, %47, %20
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @BufferIsValid(i64) #1

declare dso_local i64 @BufferIsLocal(i64) #1

declare dso_local i32* @GetBufferDescriptor(i64) #1

declare dso_local i32 @LWLockRelease(i32) #1

declare dso_local i32 @BufferDescriptorGetContentLock(i32*) #1

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
